--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,25 +1,33 @@
-name: Docker Image CI
-
+name: Push the Docker image to AWS ECR Repo
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
 jobs:
-
   build:
-
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: authenticate aws 
-      run: |
-        aws configure
-        ACCESS_KEY
-        
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-2
+
+    - name: Login to Amazon ECR
+      uses: aws-actions/amazon-ecr-login@v1
+      with: 
+        registry: ${{ secrets.ECR_URI }}
+
     - name: Build the Docker image
       run: |
-        docker build -t project-ecs:$(date +%s) -f Dockerfile
-        docker 
+        docker build -t project-ecs:$(date +%s) .
+
+    - name: Push the Docker image to ECR 
+      run: |
+          docker tag project-ecs:$(date +%s) ${{ secrets.ECR_URI }}:latest
+          docker push ${{ secrets.ECR_URI }}:latest
+        
