--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-.terraform
-.terraform.lock.hcl
-terraform.tfvars
-*.tfvars
-terraform.tfstate
-*.tfstate
+/terraform/.terraform
+/terraform/.terraform.lock.hcl
+/terraform/*.tfvars
+/terraform/*.tfstate
