--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -34,13 +34,17 @@ jobs:
 
     - name: Terraform Init
       run: terraform init
+      working-directory: ./terraform/
 
     - name: Terraform Format
       run: terraform fmt -check
+      working-directory: ./terraform/
 
     - name: Terraform Plan
       run: terraform plan -input=false
+      working-directory: ./terraform/
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
+      working-directory: ./terraform/
