--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -17,4 +17,8 @@ RUN rm -rf /usr/share/nginx/html/*
 
 COPY --from=builder /app/build /usr/share/nginx/html
 
+RUN addgroup -S nonroot && adduser -S nonroot -G nonroot
+
+USER nonroot:nonroot
+
 EXPOSE 8080
