--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,50 +1,39 @@
 
-name: 'Terraform Apply'
+name: Terraform Apply
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches:   
+    branches:
       - main
+    paths:
+      - "terraform/**"
+  workflow_dispatch:
+  
+defaults:
+  run:
+    working-directory: ./terraform    
+
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_REGION: ${{ secrets.AWS_REGION }} 
+
 jobs:
-  terraform:
-    name: 'Terraform'
+  terraform-apply:
+    name: Terraform Apply
     runs-on: ubuntu-latest
-    environment: development
-
-    permissions:
-      contents: read
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-        
-    - name: Setup Terraform CLI
-      uses: hashicorp/setup-terraform@v3
-      with:
-          terraform_version: 1.7.5
-
-    - name: Terraform Init
-      run: terraform init
-      working-directory: ./terraform/
-
-    - name: Terraform Format
-      run: terraform fmt -check
-      working-directory: ./terraform/
-
-    - name: Terraform Plan
-      run: terraform plan -input=false
-      working-directory: ./terraform/
-
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
-      working-directory: ./terraform/
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Terraform Apply
+        run: |
+          terraform init
+          terraform apply -auto-approve
